chore: fixes block spacing and mobile overflow, refines theme selector

--- a/templates/ecommerce/src/app/_blocks/Content/index.module.scss
+++ b/templates/ecommerce/src/app/_blocks/Content/index.module.scss
@@ -6,6 +6,7 @@
   gap: var(--base) calc(var(--base) * 2);
 
   @include mid-break {
+    grid-template-columns: repeat(6, 1fr);
     gap: calc(var(--base) / 2) var(--base);
   }
 }
@@ -32,7 +33,7 @@
   }
 
   @include small-break {
-    grid-column-end: span 12;
+    grid-column-end: span 6;
   }
 }
 
