--- a/templates/ecommerce/src/app/_components/Footer/index.module.scss
+++ b/templates/ecommerce/src/app/_components/Footer/index.module.scss
@@ -5,6 +5,10 @@
   z-index: var(--header-z-index);
   background-color: var(--foreground);
   color: var(--background);
+
+  @include small-break {
+    padding: calc(var(--base) * 2) 0;
+  }
 }
 
 :global([data-theme="dark"]) {
@@ -17,6 +21,8 @@
 .wrap {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: calc(var(--base) / 2) var(--base);
 }
 
 .logo {
@@ -25,14 +31,14 @@
 
 .nav {
   display: flex;
+  gap: calc(var(--base) / 4) var(--base);
   align-items: center;
+  flex-wrap: wrap;
+  opacity: 1;
+  transition: opacity 100ms linear;
+  visibility: visible;
 
   > * {
     text-decoration: none;
-    margin-left: var(--base);
-  }
-
-  @include mid-break {
-    display: none;
   }
 }
